<resources>
    <string name="app_name">じゃんけんゲーム</string>
    <string name="title">☆じゃんけんゲーム☆</string>
    <string name="start_button">じゃんけんを始める</string>
    <string name="first_choice">＜選択画面＞</string>
    <string name="first_question">＜AI読み取り画面＞</string>
    <string name="select">出す手を選んでね！</string>
    <string name="result">結果</string>
    <string name="gu">グー</string>
    <string name="choki">チョキ</string>
    <string name="pa">パー</string>
    <string name="q1">決定を押してください</string>
    <string name="ok">決定</string>
    <string name="vs">VS</string>
    <string name="your_Hand">あなたの手</string>
    <string name="AI_Hand">私（AI）の手</string>
    <string name="reset">最初に戻る</string>
    <string name="lose">あなたの負けです</string>
    <string name="draw">引き分けです</string>
    <string name="win">あなたの勝ちです</string>
</resources>
